# nanbase

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  todo.md
.github/workflows/: c-cpp.yml
asm/: CMakeLists.txt  all.ns  asm.hpp  asm_defs.h  main.cpp  registers.txt
code_gen/: CMakeLists.txt  code_gen.hpp  main.cpp  x86_64.hpp
test-asm/: hellow.ns  test.ns
vm/: isolate.hpp  main.cpp  virtual.hpp
